--- a/views/paginas/TelaPerfil.html
+++ b/views/paginas/TelaPerfil.html
@@ -33,78 +33,11 @@
       <h2 class="header-profile-name"> Zeca Figueiredo </h2>
     </div>
   </header>
-  <main style="display: flex;"> 
-    <div class="external-flex-profile">
-      <div class="profile-section-profile">
-        <div>
-          <img class="profile-picture-profile" src="/views/img/conta1.jpg">
-        </div>
-        <div>
-          <h2 class="profile-name-profile">José Serafim</h2>
-        </div>
-        <div>
-          <h4 class="profile-age-profile">Meninos do Lago</h4>
-          <h4 class="profile-age-profile">13 Anos</h4>
-          <p class="profile-bio-profile"> Ola, esta eh minha biografia, um metodo
-            facil e rapido de expor a minha pessoa
-            e personalidade!!!   </p>
-        </div>
-      </div>
-      <div class="post-section-profile">
-        <div class="postagens">
-          <textarea id="postagem" rows="4" cols="50" placeholder="shiteposte?"></textarea>
-          <button id="postar">Postar</button>
-        </div>
-        <div class="post-profile">
-          <div class="post-left-profile">
-            <a href="/views/paginas/TelaPerfil.html"><img class="post-picture-profile" src="/views/img/conta1.jpg"></a>
-          </div>
-          <div class="post-text-profile">
-            <p class="profile-bio-profile"> Ola, esta eh minha quarta postagem!!!</p>
-          </div>
-        </div>
-        <div class="post-profile">
-          <div class="post-left-profile">
-            <a href="/views/paginas/TelaPerfil.html"><img class="post-picture-profile" src="/views/img/conta1.jpg"></a>
-          </div>
-          <div class="post-text-profile">
-            <p class="profile-bio-profile"> Ola, esta eh minha terceira postagem!!!</p>
-          </div>
-        </div>
-        <div class="post-profile">
-          <div class="post-left-profile">
-            <a href="/views/paginas/TelaPerfil.html"><img class="post-picture-profile" src="/views/img/conta1.jpg"></a>
-          </div>
-          <div class="post-text-profile">
-            <p class="profile-bio-profile"> Ola, esta eh minha segunda postagem!!!</p>
-          </div>
-        </div>
-        <div class="post-profile">
-          <div class="post-left-profile">
-            <a href="/views/paginas/TelaPerfil.html"><img class="post-picture-profile" src="/views/img/conta1.jpg"></a>
-          </div>
-          <div class="post-text-profile">
-            <p class="profile-bio-profile"> Ola, esta eh minha primeira postagem!!!</p>
-          </div>
-        </div>
-        </div>
-      </div>
-    </div>
+  
+  <main>
+
   </main>
 
-  <footer>
-    <div class="footer-padrao">
-      <div>
-          <p>&copy; 2023 - Todos os 
-            direitos reservados</p>
-          <p>Entre em contato pelo 
-            e-mail: groyerccl@gmail.com</p>
-          <p>Termos de uso<a href=""></a></p>
-          <p>Política de privacidade<a href=""></a></p>
-          <p>Sobre nós<a href=""></a></p>
-      </div>
-    </div>
-  </footer>
   
 
 </body>
