--- a/views/css/style.css
+++ b/views/css/style.css
@@ -365,39 +365,23 @@ main {
 /* header */
 /*------------------------------------------------------------*/
 
-.sidebar {
+/* sidebar */
+
+.container-sidebar {
+  height: 100%;
   width: 0;
   position: fixed;
   top: 0;
-  bottom: 0;
-  left: -250px; /* A barra lateral começa fechada, fora da tela */
-  background-color: #f5f5f5;
-  padding-top: 60px;
-  transition: 0.3s;
-  z-index: 1;
+  left: 0;
+  background-color: #000000;
+  transition: 0.15s;
+  color: #fff;
 }
 
-.sidebar a {
-  padding: 8px 8px 8px 32px;
-  text-decoration: none;
-  font-size: 18px;
-  color: #818181;
-  display: block;
-  transition: 0.3s;
+.close-sidebar {
+  
 }
 
-.sidebar a:hover {
-  color: #f1f1f1;
-}
-
-.sidebar .closebtn {
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  font-size: 30px;
-}
-
-/* HEADER LEFT */
 .header {
   display: flex;
   background-color: rgb(255, 255, 255);
@@ -440,6 +424,12 @@ main {
   padding-left: 10vh;
 }
 
+#dropdownArrow {
+  margin-right: 1vh;
+  font-size: 12px;
+  color: #ffa114;
+}
+
 .vertical-decoration-line {
   border-left: 0.5vh solid rgb(215, 215, 215);
   height: 75%;
@@ -472,6 +462,7 @@ main {
   background-color: rgb(255, 255, 255);
   display: flex;
   width: 30vh;
+  cursor: pointer;
   padding-left: 3vh;
   align-items: center;
   text-align: center;
