--- a/views/paginas/TelaPerfil.html
+++ b/views/paginas/TelaPerfil.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title> Página de Perfil </title>
-  <link rel="stylesheet" href="/views/css/style.css">
-  <link rel="stylesheet" href="/views/css/header.css">
-  <script type="text/javascript" src="/views/js/script.js"></script>
+  <link rel="stylesheet" type="text/css" href="../css/style.css">
+  <link rel="icon" type="image/x-icon" href="../img/favicon.ico">
+  <script type="text/javascript" src="../js/script.js"></script>
 </head>
 <body>
   <header class="header">
@@ -14,21 +14,21 @@
       <img class="logo-image" src="/views/img/logo-da-empresa.png">
       <p class="hamburguer-menu-image">&#9776;</p>
 
-      <div id="mySidebar" class="sidebar">
-        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        <a href="#">Item 1</a>
-        <a href="#">Item 2</a>
-        <a href="#">Item 3</a>
-      </div>
+
+      
+    </div>
+    <div id="sidebarContainer" class="container-sidebar" onClick="openNav()">
+      <a href="javascript:void(0)" id="closeAnchor" class="close-sidebar" onClick="closeNav()">&#10006</a>
     </div>
     <div class="header-middle">
       <div class="vertical-decoration-line"></div>
       <div class="container-searchbar">
-        <button class="header-searchbar-button"><img src="/views/img/search.svg"></button>
+        <button class="header-searchbar-button"><img src="../img/search.svg"></button>
         <input class="header-searchbar" placeholder="Buscar..." type="text">
       </div>
     </div>
-    <div class="header-right">
+    <div class="header-right" onClick="openHeaderDropdown">
+      <p id="dropdownArrow" class="dropdown-arrow">&#11167</p>
       <img class="header-profile-picture" src="/views/img/conta1.jpg">
       <h2 class="header-profile-name"> Zeca Figueiredo </h2>
     </div>
