--- a/views/css/style.css
+++ b/views/css/style.css
@@ -4,6 +4,12 @@
 /*------------------------------------------------------------*/
 a:visited {
   text-decoration: none;
+  color: black;
+}
+
+a {
+  text-decoration: none;
+  color: black;
 }
 
 body {
@@ -181,92 +187,6 @@ main {
       }
 /*------------------------------------------------------------*/
 
-/*carrosel*/
-/*------------------------------------------------------------*/
-/* Slideshow container */
-.slideshow-container {
-  max-width: 1000px;
-  position: relative;
-  margin: auto;
-  margin-top: 50px;
-}
-
-/* Hide the images by default */
-.mySlides {
-  display: none;
-}
-
-/* Next & previous buttons */
-.prev, .next {
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-  width: auto;
-  margin-top: -22px;
-  padding: 16px;
-  color: #000000;
-  font-weight: bold;
-  font-size: 18px;
-  transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
-  user-select: none;
-}
-
-/* Position the "next button" to the right */
-.next {
-  right: 0;
-  border-radius: 3px 0 0 3px;
-}
-
-/* On hover, add a black background color with a little bit see-through */
-.prev:hover, .next:hover {
-  background-color: #e3e3e3b4;
-}
-
-/* Caption text */
-.text {
-  color: #000000;
-  font-size: 15px;
-  padding: 8px 12px;
-  position: absolute;
-  bottom: 8px;
-  width: 100%;
-  text-align: center;
-}
-
-/* Number text (1/3 etc) */
-.numbertext {
-  color: #000000;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
-}
-
-/* The dots/bullets/indicators */
-.dot {
-  cursor: pointer;
-  height: 15px;
-  width: 15px;
-  margin: 0 2px;
-  margin-bottom: 50px;
-  background-color: #000000;
-  border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.6s ease;
-}
-
-.active, .dot:hover {
-  background-color: rgb(252, 174, 84);
-}
-
-/* Fading animation */
-.fade {
-  animation-name: fade;
-  animation-duration: 1.5s;
-}
-
-/*------------------------------------------------------------*/
 
 /*nexus hub*/
 /*------------------------------------------------------------*/
@@ -373,13 +293,33 @@ main {
   position: fixed;
   top: 0;
   left: 0;
-  background-color: #000000;
+  background-color: #f0f0f0;
   transition: 0.15s;
-  color: #fff;
+  padding-top: 20px;
 }
 
 .close-sidebar {
-  
+  position: absolute;
+  right: 0;
+  margin-right: 40px;
+  margin-bottom: 40px;
+  color: #ffa114;
+  text-decoration: 0;
+}
+
+.sidebar-element {
+  color: #c0faff;
+  width: 100%;
+  height: 10%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+}
+
+.sidebar-element__anchor {
+  flex: 1;
+  position: absolute;
 }
 
 .header {
@@ -415,20 +355,49 @@ main {
 .hamburguer-menu-image {
   color: #ffa114;
   font-size: 22px;
+  margin-right: 30px;
 }
 
-.header-middle {
-  flex: 1;
-  display: flex;
-  align-items: center;
-  padding-left: 10vh;
-}
-
-#dropdownArrow {
+.dropdown-arrow {
   margin-right: 1vh;
   font-size: 12px;
   color: #ffa114;
+  transition: 0.15s;
 }
+
+.dropdown-menu {
+  display: none;
+  background-color: #fefefe;
+  width: 25vh;
+  height: 125px;
+  position: absolute;
+  right: 1px;
+  transition: 0.15s;
+  margin-right: 1px;
+  z-index: 1000;
+  flex-direction: column;
+  border-radius: 2px;
+  border: 1px solid rgb(55, 137, 0);
+  color: #535353;
+}
+
+.dropdown-menu__element {
+  flex: 1;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+
+.dropdown-menu__element img {
+  width: 25px;
+  margin-right: 15px;
+  margin-left: 15px;
+}
+
+.dropdown-menu__element:not(:last-of-type) {
+  border-bottom: 1px solid rgb(183, 183, 183);
+}
+
 
 .vertical-decoration-line {
   border-left: 0.5vh solid rgb(215, 215, 215);
@@ -461,11 +430,19 @@ main {
 .header-right {
   background-color: rgb(255, 255, 255);
   display: flex;
-  width: 30vh;
+  position: absolute;
+  right: 0;
+  width: 25vh;
+  flex: 1;
   cursor: pointer;
-  padding-left: 3vh;
+  padding-left: 30vh;
   align-items: center;
   text-align: center;
+  position: absolute;
+  right: 0;
+  height: 100%;
+  z-index: -1;
+  padding-right: 5vh;
 }
 .header-profile-picture {
   border-radius: 50%;
