--- a/views/paginas/telaLogin.html
+++ b/views/paginas/telaLogin.html
@@ -5,21 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="/views/css/style.css">
+    <script type="text/javascript" src="/views/js/script.js"></script>
 </head>
 <body class="background">
-  <header class="header-padrao">
-    <img src="../img/logo-menu-sidebar.jpg" class="sidebar-logo">
-    <a href="index.html"> <img src="../img/logo-da-empresa.png" class="logo-empresa"> </a>
-    <div class="dropdown">
-      <button onclick="myFunction()" class="dropbtn"> Pesquisar </button>
-      <div id="myDropdown" class="dropdown-content">
-        <input type="text" placeholder="Search.." id="myInput" onkeyup="filterFunction()">
-        <a href=""> Zeca </a>
-        <a href=""> Zezinho </a>
-        <a href=""> Joao </a>
+  <header class="header">
+    <div class="header-left" onclick="openNav()">
+      <img class="logo-image" src="/views/img/logo-da-empresa.png">
+      <p class="hamburguer-menu-image">&#9776;</p>
+
+      <div id="mySidebar" class="sidebar">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        <a href="#">Item 1</a>
+        <a href="#">Item 2</a>
+        <a href="#">Item 3</a>
       </div>
-    </div> 
+    </div>
+    <div class="header-middle">
+      <div class="vertical-decoration-line"></div>
+      <div class="container-searchbar">
+        <button class="header-searchbar-button"><img src="/views/img/search.svg"></button>
+        <input class="header-searchbar" placeholder="Buscar..." type="text">
+      </div>
+    </div>
+    <div class="header-right">
+      <img class="header-profile-picture" src="/views/img/conta1.jpg">
+      <h2 class="header-profile-name"> Zeca Figueiredo </h2>
+    </div>
   </header>
     <main class="page">
         <form method="POST" class="formLogin">
@@ -29,8 +41,8 @@
             <input type="email" placeholder="Digite seu e-mail" autofocus="true" />
             <label for="password">Senha</label>  
             <input type="password" placeholder="Digite sua senha" />
-            <a href="telaEsqueci.html">Esqueci minha senha</a>
-            <a href="telaCadastro.html">Não tenho conta</a>
+            <a href="/views/paginas/telaEsqueci.html">Esqueci minha senha</a>
+            <a href="/views/paginas/telaCadastro.html">Não tenho conta</a>
             <input type="submit" value="Acessar" class="btn" />
         </form>
       </main>
