--- a/views/paginas/telaTimeline.html
+++ b/views/paginas/telaTimeline.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadastro</title>
-    <link rel="stylesheet" href="/views/css/style.css">
-    <script type="text/javascript" src="/views/js/script.js"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title> Página de Perfil </title>
+  <link rel="stylesheet" href="/views/css/style.css">
+  <link rel="stylesheet" href="/views/css/header.css">
+  <script type="text/javascript" src="/views/js/script.js"></script>
 </head>
 <body>
   <header class="header">
@@ -33,19 +33,11 @@
       <h2 class="header-profile-name"> Zeca Figueiredo </h2>
     </div>
   </header>
-  
   <main>
     
-
   </main>
+  <footer>
 
-  <footer class="footer-padrao">
-    <p>&copy; 2023 - Todos os direitos reservados</p>
-      <p>Entre em contato pelo e-mail: contato@exemplo.com</p>
-      <p><a>Termos de uso</a></p>
-      <p><a>Política de privacidade</a></p>
-      <p><a>Sobre nós</a></p>
   </footer>
-    
 </body>
 </html>
