--- a/views/css/style.css
+++ b/views/css/style.css
@@ -17,11 +17,15 @@ body {
   margin-right: 0;
   margin-left: 0;
   margin-bottom: 0;
-  padding-top: 10vh;
+  padding-top: 12vh;
   padding-right: 0;
   padding-left: 0;
   padding-bottom: 0;
   font-family: 'Roboto', 'sans-sariff';
+}
+
+.flex-main {
+  display: flex;
 }
 
 main {
@@ -332,6 +336,7 @@ main {
   right: 0;
   border-bottom: 1px solid rgb(214, 214, 214);
   box-shadow: 0px 1px 100px rgba(0, 0, 0, 0.2);
+  z-index: 1000;
 }
 
 .header-left {
@@ -611,3 +616,64 @@ input[type="checkbox"] {
 
 }
 /*------------------------------------------------------------*/
+
+.table-row__chamada th,
+  .student th {
+  background-color: orange;
+  color: #fff;
+  padding: 0.5em 1em;
+  border-radius: 2px;
+}
+
+.table-row__chamada td, 
+  .student td{
+  border-top: 1px solid #eee;
+  padding: 0.5em 1em;
+  border-radius: 2px;
+}
+
+.table-row__chamada input {
+  cursor: pointer;
+}
+
+/* Tipos de Colunas /
+/  Total de Faltas */
+th.missed-col {
+  background-color: #f00;
+}
+
+td.missed-col {
+  background-color: #ffecec;
+  color: #f00;
+  text-align: center;
+}
+
+.name-col {
+  text-align: left;
+}
+.table-container{
+  max-width: 70%;
+  overflow-x: auto;
+  justify-content: space-between;
+  align-items: center;
+  height: 70vh;
+  margin: 0;
+}
+
+th.name-col,
+td.name-col {
+    position: sticky;
+    left: 0;
+    background-color: #fff;
+    z-index: 1;
+
+}
+th.name-col {
+  background-color: orange;
+  color: #fff;
+  text-align: center;
+}
+td.name-col {
+  border-right: 2px solid rgb(227, 227, 227);
+  
+}
